--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
     <h2>JetBlue Charleston HTML Banners</h2>
   </div>
   <div class="buttons">
-    <a
-      href="../JetBlue_Retail_23_Delivery_v8_2024/Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_160x600_base_2024/index.html">160x600</a>
+    <a href="Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_160x600_base_2024/index.html">160x600</a>
     <a height="600" width="160"
-      href="../JetBlue_Retail_23_Delivery_v8_2024/Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_300x250_base_2024/index.html">300x250</a>
+      href="Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_300x250_base_2024/index.html">300x250</a>
     <a height="600" width="160"
-      href="../JetBlue_Retail_23_Delivery_v8_2024/Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_300x600_base_2024/index.html">300x600</a>
+      href="Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_300x600_base_2024/index.html">300x600</a>
     <a height="600" width="160"
-      href="../JetBlue_Retail_23_Delivery_v8_2024/Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_728x90_base_2024/index.html">728x90</a>
+      href="Getaway/dynamic/base/JB_Retail_23_Getaway_Dynamic_728x90_base_2024/index.html">728x90</a>
   </div>
 </body>
 
